--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 - 조회이력 저장 후 개인화에 사용하기
-- 로그인
 - 버튼 hitbox 키우기
 - 상세페이지 loading spinner
 - 대상: 있으면 가져오고 없으면 디폴트로 ＂연령 제한 없음”
+- 텍스트 전부 pretendard
+- 헤더 튀는 현상 잡기
+- 찜하기 구현
