--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 - 조회이력 저장 후 개인화에 사용하기
-- 버튼 hitbox 키우기
+- 찜하기/조회내역 보여주기 ("로그인하여사용하기" 보여주기)
 - 상세페이지 loading spinner
-- 대상: 있으면 가져오고 없으면 디폴트로 ＂연령 제한 없음”
 - 텍스트 전부 pretendard
+- 버튼 hitbox 키우기
 - 헤더 튀는 현상 잡기
-- 찜하기 구현
+- 대상: 있으면 가져오고 없으면 디폴트로 ＂연령 제한 없음”
