Add favorite and view history section to profile

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
+- 찜/최근 상태관리
+- 찜/최근 더보기
 - 조회이력 저장 후 개인화에 사용하기
-- 찜하기/조회내역 보여주기 ("로그인하여사용하기" 보여주기)
 - 텍스트 전부 pretendard
 - 버튼 hitbox 키우기
 - 헤더 튀는 현상 잡기
