Add customer service link

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,10 @@
+- 회원탈퇴
+- 카카오 이메일 추가
+- 구글 업로드 키 fingerprint 카카오쪽에 등록
+- 베이직 아이템에서 장소가 없거나 참가비가 무료이면 안보여져야함
+- 지역 잡기
 - mixpanel
+- 고객센터
 - 텍스트 전부 pretendard
 - 버튼 hitbox 키우기
 - 헤더 튀는 현상 잡기
